Added social icons to footer. Finished Decals - Get Started page

--- a/decalsGetStarted.html
+++ b/decalsGetStarted.html
@@ -60,20 +60,71 @@
         </div>
     </div>
 
+
+
     <!-- GET STARTED STEPS section -->
-    <section></section>
+    <section>
+        <p class="pSmall">Home > Vinyl Decals > Get Started</p>
+        <h2 class="text-center">Steps to Get Started</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body stepsIconCards text-center">
+                            <h3>Designing</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body stepsIconCards text-center">
+                            <h3>Equipment</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body stepsIconCards text-center">
+                            <h3>Creation Process</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-6">
+                    <div class="card">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body stepsIconCards text-center">
+                            <h3>Decal Application</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
     
+
+
+
     <!-- RESOURCES section -->
     <section id="resources">
         <div class="container">
             <div class="row resourcesRow">
-                <div class="col-sm-12 col-md-3 col-lg-3">
-                    <h3>Pro Tips</h3>
-                    <button type="button">Learn More</button>
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="card-body resourceCard text-center">
+                        <h3>Pro Tips<br>&nbsp</h3>
+                        <button type="button">Learn More</button>
+                    </div>
                 </div>
-                <div class="col-sm-12 col-md-3 col-lg-3">
-                    <h3>Related Hobbies</h3>
-                    <button type="button">Learn More</button>
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="card-body resourceCard text-center">
+                        <h3>Related Hobbies</h3>
+                        <button type="button">Learn More</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -81,7 +132,7 @@
 
 
 
-    <!-- BACK TO TOP BUTTON -->
+<!-- BACK TO TOP BUTTON -->
 <button onclick="topFunction()" id="bttBtn" title="Back to top">Top</button>
 
 
@@ -102,8 +153,19 @@
                 <p>Devonport, MN 91735</p>
                 <p>Support@HobbyCapital.com</p>
                 <p>(931) 562-3694</p>
-                <div>
-                    social icons go here
+                <div class="socialIcons">
+                    <div class="col">
+                        <img src="./images/icons/IG.png" alt="Instagram icon">
+                    </div>
+                    <div class="col">
+                        <img src="./images/icons/youTube.png" alt="YouTube icon">
+                    </div>
+                    <div class="col">
+                        <img src="./images/icons/tikTok.png" alt="Tiktok icon">
+                    </div>
+                    <div class="col">
+                        <img src="./images/icons/pinterest.png" alt="Pinterest icon">
+                    </div>
                 </div>
             </div>
         </div>
