--- a/index.html
+++ b/index.html
@@ -152,8 +152,19 @@
                 <p>Devonport, MN 91735</p>
                 <p>Support@HobbyCapital.com</p>
                 <p>(931) 562-3694</p>
-                <div>
-                    social icons go here
+                <div class="socialIcons">
+                    <div class="col">
+                        <img src="./images/icons/IG.png" alt="Instagram icon">
+                    </div>
+                    <div class="col">
+                        <img src="./images/icons/youTube.png" alt="YouTube icon">
+                    </div>
+                    <div class="col">
+                        <img src="./images/icons/tikTok.png" alt="Tiktok icon">
+                    </div>
+                    <div class="col">
+                        <img src="./images/icons/pinterest.png" alt="Pinterest icon">
+                    </div>
                 </div>
             </div>
         </div>
