Webpages linked together and prep to add images

--- a/decalApplication.html
+++ b/decalApplication.html
@@ -33,7 +33,7 @@
     <header class="header" id="myHeader">
         <div class="logoBrand">
             <!-- <a href="index.html"><img class="logo" src="./images..." alt="Hobby Shop logo"></a> -->
-            <h2 class="shopName">Hobby Capital</h2>
+            <a href="./index.html"><h2 class="shopName">Hobby Capital</h2></a>
         </div>
         <div class="topNav">
             <nav class="inline">
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
                             <h5 class="card-title">Step 1: Clean Surface</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat aliquet faucibus fringilla metus pellentesque ac amet. Cursus tellus lectus nulla sed in egestas tincidunt suscipit blandit.</p>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
                             <h5 class="card-title">Step 2: Prepare Decal</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat aliquet faucibus fringilla metus pellentesque ac amet. Cursus tellus lectus nulla sed in egestas tincidunt suscipit blandit.</p>
@@ -119,7 +119,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
                             <h5 class="card-title">Step 3: Position Decal</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat aliquet faucibus fringilla metus pellentesque ac amet. Cursus tellus lectus nulla sed in egestas tincidunt suscipit blandit.</p>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
                             <h5 class="card-title">Step 4: Peel Off Backing</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat aliquet faucibus fringilla metus pellentesque ac amet. Cursus tellus lectus nulla sed in egestas tincidunt suscipit blandit.</p>
@@ -139,7 +139,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
                             <h5 class="card-title">Step 5: Adhere Decal</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat aliquet faucibus fringilla metus pellentesque ac amet. Cursus tellus lectus nulla sed in egestas tincidunt suscipit blandit.</p>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
                             <h5 class="card-title">Step 6: Peel Off Transfer Tape</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat aliquet faucibus fringilla metus pellentesque ac amet. Cursus tellus lectus nulla sed in egestas tincidunt suscipit blandit.</p>
