--- a/decalsGetStarted.html
+++ b/decalsGetStarted.html
@@ -33,7 +33,7 @@
     <header class="header" id="myHeader">
         <div class="logoBrand">
             <!-- <a href="index.html"><img class="logo" src="./images..." alt="Hobby Shop logo"></a> -->
-            <h2 class="shopName">Hobby Capital</h2>
+            <a href="./index.html"><h2 class="shopName">Hobby Capital</h2></a>
         </div>
         <div class="topNav">
             <nav class="inline">
