--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="header" id="myHeader">
         <div class="logoBrand">
             <!-- <a href="index.html"><img class="logo" src="./images..." alt="Hobby Shop logo"></a> -->
-            <h2 class="shopName">Hobby Capital</h2>
+            <a href="./index.html"><h2 class="shopName">Hobby Capital</h2></a>
         </div>
         <div class="topNav">
             <nav class="inline">
@@ -88,7 +88,7 @@
                     <div class="card">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Glasswork</h4>
+                            <h4 class="card-text gridCategoryTitle">Glass Making</h4>
                         </div>
                     </div>
                 </div>
@@ -112,11 +112,11 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <div class="card">
+                        <a href="./decalsGetStarted.html"><div class="card">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-text gridCategoryTitle">Vinyl Decals</h4>
-                        </div>
+                        </div></a>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
