Added imagery to homepage and drop shadow to gallery cards.
Plan to change some images later but they are placeholders for now to start collecting data.

--- a/decalsGetStarted.html
+++ b/decalsGetStarted.html
@@ -23,7 +23,7 @@
 <!--Codes to embed Google fonts-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Inter:wght@400;500&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@400;500;600;700&family=Raleway:wght@400;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Comforter&family=Dancing+Script&family=Inter:wght@400;500&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@400;500;600;700&family=Raleway:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 
@@ -53,7 +53,7 @@
 
 <div class="content">
     <!-- HERO section -->
-    <div class="jumbotron jumbotron-fluid heroSection">
+    <div class="jumbotron jumbotron-fluid decalAppHero">
         <div class="container text-center">
             <h1 class="text-center">Vinyl Decals</h1>
             <h3 class="text-center">Get Started</h3>
