--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!--Codes to embed Google fonts-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Inter:wght@400;500&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@400;500;600;700&family=Raleway:wght@400;600;700;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Comforter&family=Dancing+Script&family=Inter:wght@400;500&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Oswald:wght@400;500;600;700&family=Raleway:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 
@@ -55,7 +55,7 @@
 <!-- HERO section -->
     <div class="jumbotron jumbotron-fluid heroSection">
         <div class="container text-center">
-            <h1 class="text-center">Hobby Capital</h1>
+            <h1 class="text-center heroTitle">Hobby Capital</h1>
             <h3 class="text-center">Catchy brand motto goes here...</h3>
         </div>
     </div>
@@ -75,26 +75,26 @@
         <h2 class="text-left">Hobby Categories</h2>
         <!-- Built with Bootstrap 4 grid -->
         <div class="container">
-            <div class="row">
+            <div class="row hobbyRow01">
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card border-0 cardShadow">
+                        <img src="./images/categories/3Dprinting.png" class="card-img-top" alt="3D Printing">
                         <div class="card-body">
                             <h4 class="card-text gridCategoryTitle">3D Printing</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card border-0 cardShadow">
+                        <img src="./images/categories/GlassMaking.png" class="card-img-top" alt="Glass Making">
                         <div class="card-body">
                             <h4 class="card-text gridCategoryTitle">Glass Making</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card border-0 cardShadow">
+                        <img src="./images/categories/ResinWork.png" class="card-img-top" alt="Resin Work Resin Work - pouring on tabletop">
                         <div class="card-body">
                             <h4 class="card-text gridCategoryTitle">Resin Work</h4>
                         </div>
@@ -104,24 +104,24 @@
 
             <div class="row">
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card border-0 cardShadow">
+                        <img src="./images/categories/StickerMaking.png" class="card-img-top" alt="Sticker Making">
                         <div class="card-body">
                             <h4 class="card-text gridCategoryTitle">Sticker Making</h4>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                        <a href="./decalsGetStarted.html"><div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                    <a href="./decalsGetStarted.html"><div class="card border-0 cardShadow">
+                        <img src="./images/categories/VinylDecals.png" class="card-img-top" alt="white vinyl decal of an ulua">
                         <div class="card-body">
                             <h4 class="card-text gridCategoryTitle">Vinyl Decals</h4>
                         </div></a>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card border-0 cardShadow">
+                        <img src="./images/categories/WoodEngraving.png" class="card-img-top" alt="Wood Engraving">
                         <div class="card-body">
                             <h4 class="card-text gridCategoryTitle">Wood Engraving</h4>
                         </div>
