Added Google Analytics script

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L3PC4SZ1L4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L3PC4SZ1L4');
+</script>
+
     <title>Jill Van's Hobby Shop Prototype - Hobby Capital</title>
 <!-- Meta code  -->
     <meta name="description" content="Jill Van's Hobby Shop Prototype - Hobby Capital" />
