--- a/decalsGetStarted.html
+++ b/decalsGetStarted.html
@@ -11,6 +11,18 @@
 
   gtag('config', 'G-L3PC4SZ1L4');
 </script>
+<!-- Hotjar Tracking Code for https://jillbills.github.io/HobbyCapitalPrototype/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2800380,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 
     <title>Jill Van's Hobby Shop Prototype - Vinyl Decals - Get Started</title>
 <!-- Meta code  -->
