Changed hobby categories title from left align to centered

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <!-- HOBBY CATEGORIES GRID section -->
     <section id="hobbyCategories">
-        <h2 class="text-left">Hobby Categories</h2>
+        <h2 class="text-center">Hobby Categories</h2>
         <!-- Built with Bootstrap 4 grid -->
         <div class="container">
             <div class="row hobbyRow01">
