Centered hobby categories header. Smaller headers for grid gallery cards. Changed footer header to logo display font.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 <!-- HOBBY CATEGORIES GRID section -->
     <section id="hobbyCategories">
-        <h2 class="text-left">Hobby Categories</h2>
+        <h2 class="text-center">Hobby Categories</h2>
         <!-- Built with Bootstrap 4 grid -->
         <div class="container">
             <div class="row hobbyRow01">
@@ -102,7 +102,7 @@
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/3Dprinting.png" class="card-img-top" alt="3D Printing">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">3D Printing</h4>
+                            <h5 class="card-text gridCategoryTitle">3D Printing</h5>
                         </div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/GlassMaking.png" class="card-img-top" alt="Glass Making">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Glass Making</h4>
+                            <h5 class="card-text gridCategoryTitle">Glass Making</h5>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/ResinWork.png" class="card-img-top" alt="Resin Work Resin Work - pouring on tabletop">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Resin Work</h4>
+                            <h5 class="card-text gridCategoryTitle">Resin Work</h5>
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/StickerMaking.png" class="card-img-top" alt="Sticker Making">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Sticker Making</h4>
+                            <h5 class="card-text gridCategoryTitle">Sticker Making</h5>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <a href="./decalsGetStarted.html"><div class="card border-0 cardShadow">
                         <img src="./images/categories/VinylDecals.png" class="card-img-top" alt="white vinyl decal of an ulua">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Vinyl Decals</h4>
+                            <h5 class="card-text gridCategoryTitle">Vinyl <br> Decals</h5>
                         </div></a>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/WoodEngraving.png" class="card-img-top" alt="Wood Engraving">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Wood Engraving</h4>
+                            <h5 class="card-text gridCategoryTitle">Wood Engraving</h5>
                         </div>
                     </div>
                 </div>
