Left aligned footer social icons. Changed resin work image.

--- a/decalsGetStarted.html
+++ b/decalsGetStarted.html
@@ -176,7 +176,7 @@
                 <p>Support@HobbyCapital.com</p>
                 <p>(931) 562-3694</p>
                 <div class="socialIcons">
-                    <div class="col">
+                    <div class="col IGicon">
                         <img src="./images/icons/IG.png" alt="Instagram icon">
                     </div>
                     <div class="col">
