--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/3Dprinting.png" class="card-img-top" alt="3D Printing">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">3D Printing</h4>
+                            <h5 class="card-text gridCategoryTitle">3D Printing</h5>
                         </div>
                     </div>
                 </div>
@@ -110,15 +110,15 @@
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/GlassMaking.png" class="card-img-top" alt="Glass Making">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Glass Making</h4>
+                            <h5 class="card-text gridCategoryTitle">Glass Making</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4 col-lg-4">
                     <div class="card border-0 cardShadow">
-                        <img src="./images/categories/ResinWork.png" class="card-img-top" alt="Resin Work Resin Work - pouring on tabletop">
+                        <img src="./images/categories/resinTable.png" class="card-img-top" alt="Resin Work Resin Work - resin tabletop">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Resin Work</h4>
+                            <h5 class="card-text gridCategoryTitle">Resin Work</h5>
                         </div>
                     </div>
                 </div>
@@ -129,7 +129,7 @@
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/StickerMaking.png" class="card-img-top" alt="Sticker Making">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Sticker Making</h4>
+                            <h5 class="card-text gridCategoryTitle">Sticker Making</h5>
                         </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                     <a href="./decalsGetStarted.html"><div class="card border-0 cardShadow">
                         <img src="./images/categories/VinylDecals.png" class="card-img-top" alt="white vinyl decal of an ulua">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Vinyl Decals</h4>
+                            <h5 class="card-text gridCategoryTitle">Vinyl Decals</h5>
                         </div></a>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                     <div class="card border-0 cardShadow">
                         <img src="./images/categories/WoodEngraving.png" class="card-img-top" alt="Wood Engraving">
                         <div class="card-body">
-                            <h4 class="card-text gridCategoryTitle">Wood Engraving</h4>
+                            <h5 class="card-text gridCategoryTitle">Wood Engraving</h5>
                         </div>
                     </div>
                 </div>
@@ -174,8 +174,8 @@
                 <p>Devonport, MN 91735</p>
                 <p>Support@HobbyCapital.com</p>
                 <p>(931) 562-3694</p>
-                <div class="socialIcons">
-                    <div class="col">
+                <div class="socialIconsRow">
+                    <div class="col IGicon">
                         <img src="./images/icons/IG.png" alt="Instagram icon">
                     </div>
                     <div class="col">
