Changed hero image again

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="jumbotron jumbotron-fluid heroSection">
         <div class="container text-center">
             <h1 class="text-center heroTitle">Hobby Capital</h1>
-            <h3 class="text-center">Catchy brand motto goes here...</h3>
+            <h3 class="text-center heroSub">Catchy brand motto goes here...</h3>
         </div>
     </div>
 
