Iterations from Google Analytics and Hotjar data - clean up secondary pages

--- a/decalApplication.html
+++ b/decalApplication.html
@@ -22,6 +22,8 @@
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/f1cde76b8a.js" crossorigin="anonymous"></script>
 
 
     <title>Jill Van's Hobby Shop Prototype - Vinyl Decals - Get Started</title>
@@ -118,8 +120,8 @@
     <section id="basicApplication">
         <h2 class="text-center">Basic Application Process</h2>
         <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="row appRow01">
+                <div class="col-sm-12 col-md-5 col-lg-5">
                     <div class="card">
                         <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
@@ -128,7 +130,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
+                <div class="col-sm-12 col-md-5 col-lg-5">
                     <div class="card">
                         <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
@@ -138,8 +140,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="row appRow02">
+                <div class="col-sm-12 col-md-5 col-lg-5">
                     <div class="card">
                         <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
@@ -148,7 +150,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
+                <div class="col-sm-12 col-md-5 col-lg-5">
                     <div class="card">
                         <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
@@ -158,8 +160,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="row appRow03">
+                <div class="col-sm-12 col-md-5 col-lg-5">
                     <div class="card">
                         <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
@@ -168,7 +170,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
+                <div class="col-sm-12 col-md-5 col-lg-5">
                     <div class="card">
                         <!-- <img src="..." class="card-img-top" alt="...">  -->
                         <div class="card-body">
@@ -189,7 +191,7 @@
         <h2 class="text-center">Pro Tips</h2>
         <h3 class="text-center">Advanced Application Strategies</h3>
         <div class="buttonContainer text-center">
-            <button type="button ">Learn More</button>
+            <button type="button">Learn More</button>
         </div>
     </section>
 
@@ -216,7 +218,7 @@
                 <p>Devonport, MN 91735</p>
                 <p>Support@HobbyCapital.com</p>
                 <p>(931) 562-3694</p>
-                <div class="socialIcons">
+                <div class="socialIconsRow">
                     <div class="col IGicon">
                         <img src="./images/icons/IG.png" alt="Instagram icon">
                     </div>
