--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/f1cde76b8a.js" crossorigin="anonymous">
+    </script>
 
 
     <title>Jill Van's Hobby Shop Prototype - Hobby Capital</title>
