--- a/decalsGetStarted.html
+++ b/decalsGetStarted.html
@@ -22,6 +22,8 @@
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/f1cde76b8a.js" crossorigin="anonymous"></script>
 
 
     <title>Jill Van's Hobby Shop Prototype - Vinyl Decals - Get Started</title>
@@ -85,42 +87,46 @@
 
 
     <!-- GET STARTED STEPS section -->
-    <section>
+    <section id="getStarted">
         <p class="pSmall">Home > Vinyl Decals > Get Started</p>
         <h2 class="text-center">Steps to Get Started</h2>
         <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+            <div class="row stepsRow01">
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="card border-0">
+                        <!-- <img src="..." class="card-img-top" alt="..." -->
+                        <i class="fas fa-pencil-alt fa-5x text-center"></i>
                         <div class="card-body stepsIconCards text-center">
-                            <h3>Designing</h3>
+                            <h4>Designing</h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="card border-0">
+                        <!-- <img src="..." class="card-img-top" alt="..."> -->
+                        <i class="fas fa-tools fa-5x text-center"></i>
                         <div class="card-body stepsIconCards text-center">
-                            <h3>Equipment</h3>
+                            <h4>Equipment</h4>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+            <div class="row stepsRow02">
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="card border-0">
+                        <!-- <img src="..." class="card-img-top" alt="..."> -->
+                        <i class="fas fa-palette fa-5x text-center"></i>
                         <div class="card-body stepsIconCards text-center">
-                            <h3>Creation Process</h3>
+                            <h4>Creation Process</h4>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <div class="card border-0">
+                        <!-- <img src="..." class="card-img-top" alt="..."> -->
+                        <i class="far fa-sticky-note fa-5x text-center"></i>
                         <div class="card-body stepsIconCards text-center">
-                            <a href="./decalApplication.html"><h3>Decal Application</h3></a>
+                            <a href="./decalApplication.html"><h4>Decal Application</h4></a>
                         </div>
                     </div>
                 </div>
@@ -175,7 +181,7 @@
                 <p>Devonport, MN 91735</p>
                 <p>Support@HobbyCapital.com</p>
                 <p>(931) 562-3694</p>
-                <div class="socialIcons">
+                <div class="socialIconsRow">
                     <div class="col IGicon">
                         <img src="./images/icons/IG.png" alt="Instagram icon">
                     </div>
