Changed hero images and added drop shadow to headers to increase visibility of text

--- a/decalsGetStarted.html
+++ b/decalsGetStarted.html
@@ -79,8 +79,8 @@
     <!-- HERO section -->
     <div class="jumbotron jumbotron-fluid decalAppHero">
         <div class="container text-center">
-            <h1 class="text-center">Vinyl Decals</h1>
-            <h3 class="text-center">Get Started</h3>
+            <h1 class="text-center textShadow">Vinyl Decals</h1>
+            <h3 class="text-center textShadow">Get Started</h3>
         </div>
     </div>
 
