--- a/decalApplication.html
+++ b/decalApplication.html
@@ -79,8 +79,8 @@
     <!-- HERO section -->
     <div class="jumbotron jumbotron-fluid decalAppHero">
         <div class="container text-center">
-            <h1 class="text-center">Vinyl Decals: Get Started</h1>
-            <h3 class="text-center">Decal Application</h3>
+            <h1 class="text-center textShadow">Vinyl Decals: Get Started</h1>
+            <h3 class="text-center textShadow">Decal Application</h3>
         </div>
     </div>
 
