--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 <!-- HERO section -->
     <div class="jumbotron jumbotron-fluid heroSection">
         <div class="container text-center">
-            <h1 class="text-center heroTitle">Hobby Capital</h1>
-            <h3 class="text-center heroSub">Catchy brand motto goes here...</h3>
+            <h1 class="text-center heroTitle textShadow">Hobby Capital</h1>
+            <h3 class="text-center heroSub textShadow">Catchy brand motto goes here...</h3>
         </div>
     </div>
 
