Added dropdown menu to topnav Hobbies link

--- a/index.html
+++ b/index.html
@@ -64,14 +64,25 @@
             <nav class="inline">
                 <ul>
                     <a href="#shop"><li class="navLinks">Shop</li></a>
-                    <a href="#hobbies"><li class="navLinks" id="navConnect">Hobbies</li></a>
+                    <div class="dropdown navLinks">
+                        <a class="btn btn-secondary dropdown-toggle bg-transparent border-0" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-expanded="false">
+                            Hobbies
+                        </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item">3D Printing</a>
+                                <a class="dropdown-item">Glass Making</a>
+                                <a class="dropdown-item">Resin Work</a>
+                                <a class="dropdown-item">Sticker Making</a>
+                                <a class="dropdown-item hobbyVDlink" href="decalsGetStarted.html">Vinyl Decals</a>
+                                <a class="dropdown-item">Wood Engraving</a>
+                            </div>
+                    </div>
                     <a href="#resources"><li class="navLinks">Resources</li></a>
-                    <a href="#contact"><li class="navLinks">Contact Us</li></a>
+                    <a href="#contact"><li class="navLinks">Contact</li></a>
                 </ul>
                 <br>
             </nav>
         </div>
-
     </header>
 
 
